# beatrice-project

./: .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  demo.py  describe.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  set.sh  setup.py
beatrice_project/: beatriceVec.py
beatricevec/: __init__.py  beats.c  beats.pyx  demo.py  main.py
constants/: local.sh
local/: production.sh
src/: beatriceVec.py  demo.py
tests/: test_beatriceVec.py
